--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <input type=hidden name="oid" value="00Dak00000Ccq57">
     <input type=hidden name="Lead_Date__c" class="outputdate">
-    <input type=hidden name="retURL" value="">
+    <input type=hidden name="retURL" value="#none">
     
 
     <label for="first_name">First Name</label
